--- a/IRIS_Adaline_KNN.ipynb
+++ b/IRIS_Adaline_KNN.ipynb
@@ -129,19 +129,19 @@
     "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.3, random_state=5)\n",
     "knn.fit(X_train,Y_train)\n",
     "mae = knn.evaluation_mae(X_test, Y_test)\n",
-    "print('mean squared error of KNearestNeighbors is', mae)"
+    "print('mean absolute error of KNearestNeighbors is', mae)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean absolute error is 0.1704883649356043\n"
+      "mean absolute error of AdalineRegressor is 0.1704883649356043\n"
      ]
     }
    ],
@@ -150,7 +150,7 @@
     "model.fit(X_train, Y_train)\n",
     "y_predic = model.predict(X)\n",
     "mae = model.evaluation_mae(X_test, Y_test)\n",
-    "print('mean absolute error is', mae)"
+    "print('mean absolute error of AdalineRegressor is', mae)"
    ]
   },
   {
