--- a/IRIS_Adaline_KNN.ipynb
+++ b/IRIS_Adaline_KNN.ipynb
@@ -113,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean squared error of KNearestNeighbors is 0.044444444444444446\n"
+      "mean absolute error of KNearestNeighbors is 0.044444444444444446\n"
      ]
     }
    ],
